--- a/project-fe/css/store.css
+++ b/project-fe/css/store.css
@@ -6,8 +6,8 @@
 
 .breadcrumb-item {
   font-weight: normal;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1.6rem;
+  
 }
 
 /* -----------------------------------------------------banner-------------------------------------------- */
@@ -16,14 +16,14 @@
   padding-right: initial;
 }
 .swiper-slide img {
-  max-height: 300px;
+  max-height: 30rem;
   height: 100%;
 }
 
 .swiper-button-next,
 .swiper-button-prev {
-  height: 50px;
-  width: 50px;
+  height: 5rem;
+  width: 5rem;
   border-radius: 50%;
   background-color: rgba(204, 204, 204, 0.5);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
@@ -31,7 +31,7 @@
 }
 .swiper-button-next::after,
 .swiper-button-prev::after {
-  font-size: 20px;
+  font-size: 2rem;
   color: #4a4a4a;
 }
 .swiper-button-next:hover,
@@ -42,14 +42,14 @@
 /* -------------------------------------product----------------------------------------------------------- */
 .product .card-img-overlay {
   top: 50%;
-  left: 65%;
+  left: 61%;
 }
 .product h5 {
-  font-size: 18px;
+  font-size: 1.8rem;
 }
 .product .btn {
   border: var(--border);
-  font-size: 14px;
+  font-size: 1.3rem;
 }
 .product .btn-primary {
   color: #3f3f3f;
@@ -78,13 +78,19 @@
  .Featured-tv .card .Featured-accessories .card{
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-bottom: none;
+  
   border-radius: initial;
+}
+.card-img-pk{
+  transition: all .5s;
 }
 .Featured-phone .card:hover .card-img-pk, .Featured-laptop .card:hover  .card-img-pk,
 .Featured-tv .card:hover  .card-img-pk, .Featured-accessories .card:hover  .card-img-pk{
   transform: scale(1.09);
   
+}
+.card{
+  overflow: hidden;
 }
 .card-product{
   position: relative;
@@ -92,20 +98,14 @@
 .Featured-phone .card-img-link ,.Featured-laptop .card-img-link ,
 .Featured-tv .card-img-link ,.Featured-accessories .card-img-link  {
   
-  margin: 10px 15px;
+  margin: 1rem 1.5rem;
 }
  .card-img-pk {
   width: 90%;
   height: 100%;
   
 }
-/* .hot{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 15%;
-  height: 100%;
-} */
+
 .Featured-phone .card-body ,.Featured-laptop .card-body,
 .Featured-tv .card-body  ,.Featured-accessories .card-body {
   text-align: initial;
@@ -115,8 +115,8 @@
 .Featured-tv .card-body .card-title ,.Featured-accessories .card-body .card-title {
   text-align: initial;
   font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: 1.8rem;
+  line-height: 2.6rem;
 }
 .Featured-phone .card .list-group .list-group-item ,.Featured-laptop .card .list-group .list-group-item,
 .Featured-tv .card .list-group .list-group-item,.Featured-accessories .card .list-group .list-group-item{
@@ -125,15 +125,41 @@
 }
 .special-price {
   font-weight: 500;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: 1.8rem;
+  line-height: 2.6rem;
   color: #ff5353;
 }
 .old-price {
-  font-size: 16px;
-  line-height: 18px;
+  font-size: 1.6rem;
+  line-height: 1.8rem;
   color: #707070;
   text-decoration: line-through;
+}
+.card-button{
+  position: absolute;
+  left: 0;
+  right: 0;
+  font-size:1.4rem;
+  transform: translateY(700%);
+  transition: transform 500ms ease;
+}
+.card:hover .card-button{
+  transform: translateY(471%);
+  color: #fff;
+  
+}
+.card-button-laptop{
+  position: absolute;
+  left: 0;
+  right: 0;
+  font-size:1.4rem;
+  transform: translateY(720%);
+  transition: transform 500ms ease;
+}
+.card:hover .card-button-laptop{
+  transform: translateY(606%);
+  color: #fff;
+  
 }
 .button-product-cart {
   background: #d9d9d9;
@@ -144,11 +170,11 @@
 .Featured-phone .btn ,.Featured-laptop .btn,
 .Featured-tv .btn ,.Featured-accessories .btn{
   font-weight: 500;
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 1.4rem;
+  line-height: 2.2rem;
   border: initial;
   margin-top: initial;
-  padding: 9px 0;
+  padding: .9rem 0;
   background: none;
 }
 .Featured-phone .btn:hover ,.Featured-laptop .btn:hover,
@@ -160,14 +186,14 @@
   box-shadow: none;
 }
 .text-km{
-  font-size: 12px;
-line-height: 20px;
+  font-size: 1.2rem;
+line-height: 2rem;
 }
 
 .text-icon {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 1.4rem;
+  line-height: 2.2rem;
   color: #6A7687;
 }
 .icons{
@@ -182,7 +208,7 @@ line-height: 20px;
   background-color: #3f3f3f;
   padding: 4px 5px;
   border-radius: 4px;
-  font-size: 12px;
+  font-size: 1.2rem;
   
 }
 .icon-name-1{
@@ -193,7 +219,7 @@ line-height: 20px;
   background-color: #3f3f3f;
   padding: 4px 5px;
   border-radius: 4px;
-  font-size: 12px;
+  font-size: 1.2rem;
   
 }
 
@@ -201,6 +227,7 @@ line-height: 20px;
   display: none;
 
 }
+
 .icon-1:hover .cpu , .icon-2:hover .mn ,
 .icon-3:hover .ram , .icon-4:hover .bn,
 .icon-5:hover .carddh , .icon-6:hover .kg {
@@ -220,6 +247,110 @@ line-height: 20px;
 
 
 
+/* -----------------------------------------------------------responsive---------------------------------------------- */
+@media (max-width: 1322px) {
+  html {
+    font-size: 55%;
+  }
+  .Breadcrumb-1 {
+    padding: 2rem 9% 0 9%;
+  }
+  .card-button{
+    position: absolute;
+    left: 0;
+    right: 0;
+    font-size:1.4rem;
+    transform: translateY(700%);
+    transition: transform 500ms ease;
+  }
+  .card:hover .card-button{
+    transform: translateY(470%);
+    color: #fff;
+    
+  }
+  .card-button-laptop{
+    position: absolute;
+    left: 0;
+    right: 0;
+    font-size:1.4rem;
+    transform: translateY(720%);
+    transition: transform 500ms ease;
+  }
+  .card:hover .card-button-laptop{
+    transform: translateY(606%);
+    color: #fff;
+    
+  }
+  
+}
+@media (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+  .Breadcrumb-1 {
+    padding: 2rem 9% 0 9%;
+  }
+  .card-button{
+    position: absolute;
+    left: 0;
+    right: 0;
+    font-size:1.4rem;
+    transform: translateY(700%);
+    transition: transform 500ms ease;
+  }
+  .card:hover .card-button{
+    transform: translateY(470%);
+    color: #fff;
+    
+  }
+  .card-button-laptop{
+    position: absolute;
+    left: 0;
+    right: 0;
+    font-size:1.4rem;
+    transform: translateY(720%);
+    transition: transform 500ms ease;
+  }
+  .card:hover .card-button-laptop{
+    transform: translateY(606%);
+    color: #fff;
+    
+  }
+  
+}
+
+@media (max-width: 991px) {
+  html {
+    font-size: 45%;
+  }
+  .Breadcrumb-1 {
+    padding: 3rem 9% 0 9%;
+  }
+  .product-details{
+    padding-left: 0;
+  }
+  .product-details-parameter{
+    margin-left: 0;
+  }
+  
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 45%;
+  }
+  
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 45%;
+  }
+  .Breadcrumb-1 {
+    padding: 4rem 9% 0 9%;
+  }
+  
+}
 
 
 
