--- a/project-fe/css/store-product.css
+++ b/project-fe/css/store-product.css
@@ -4,8 +4,8 @@
   
   .breadcrumb-item {
     font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 1.6rem;
+    
   }
 
 
@@ -17,22 +17,22 @@
     padding-right: initial;
   }
   .swiper-slide img {
-    max-height: 300px;
+    max-height: 30rem;
     height: 100%;
   }
   
   .swiper-button-next,
   .swiper-button-prev {
-    height: 50px;
-    width: 50px;
+    height: 5rem;
+    width: 5rem;
     border-radius: 50%;
     background-color: rgba(204, 204, 204, 0.5);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(0, 0, 0, 0.3);
   }
   .swiper-button-next::after,
   .swiper-button-prev::after {
-    font-size: 20px;
+    font-size: 2rem;
     color: #4a4a4a;
   }
   .swiper-button-next:hover,
@@ -40,17 +40,44 @@
     background-color: #fff;
   }
   /* ------------------------------------------product----------------------------------------------------------------- */
+  .mr-0{
+    margin-right: .5rem;
+  }
   .product-header{
     background-color: white;
     box-shadow: 0 0 3px 0 #dee2e6;
   }
+  .filter .form-check-label {
+    font-size: 1.4rem;
+  }
 
+  .filter-button{
+    padding: 1rem 1.2rem;
+    border: initial;
+    border-radius: .4rem;
+    background-color: rgb(116, 116, 116);
+    display: none;
+  }
+.filter-button .fa-bars{
+  margin-left: 0;
+}
+
+.offcanvas-start{
+  max-width: 40rem;
+}
+.offcanvas-header{
+  padding: 2rem;
+}
+.text-reset{
+  font-weight: 700;
+  font-size: 1.4rem;
+}
 
 .list-tab span{
-  font-size: 14px;
-    line-height: 14px;
+  font-size: 1.4rem;
+    line-height: 1.4rem;
     color: #555;
-    margin-right: 20px;
+    margin-right: 2rem;
     display: inline-block;
 }
 
@@ -61,143 +88,183 @@
   {
     background-color: #ff5353;
     border-color: initial;
+    
   }
  
+.btn-outline-primary{
+  font-size: 1.4rem;
+  padding: .5rem!important;
+margin-right: 1rem;
+  color: rgb(46, 46, 46);
+  border-radius: 0.4rem!important;
+}
 
 
+/* -------------------------------------------------------------------------------------------------------------- */
 
-
-
-
-
-
-
-  .Featured-phone .card ,.Featured-laptop .card,
- .Featured-tv .card .Featured-accessories .card{
+.products-phone .swiper-pagination {
+  bottom: -3px;
+}
+.products-phone .swiper-pagination-bullet {
+  background: #585858 !important;
+}
+.products-phone .card ,.products-laptop .card,
+ .products-tv .card .products-accessories .card{
   background-color: #fff;
-  border-bottom: none;
+  
   border-radius: initial;
-  
 }
-.Featured-phone .card-product:hover{
-  border: solid 1px #dee2e6;
-  
-  
+.card-img-pk{
+  transition: all .5s;
 }
-.button-cart{
-  
-  display: block;
-  /* position: absolute;
-  top:100%;
-  left: 0; */
-  
-    
-}
-.Featured-phone .card-product:hover .button-cart{
-display: block;
-}
-/* .Featured-phone .card-product:hover:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: calc(100% + 35px);
-  background: #fff;
-  
-  
-  
-  
-} */
-.Featured-phone .card:hover .card-img-pk, .Featured-laptop .card:hover  .card-img-pk,
-.Featured-tv .card:hover  .card-img-pk, .Featured-accessories .card:hover  .card-img-pk{
+.products-phone .card:hover .card-img-pk, .products-laptop .card:hover  .card-img-pk,
+.products-tv .card:hover  .card-img-pk, .products-accessories .card:hover  .card-img-pk{
   transform: scale(1.09);
   
 }
+
+
 .card-product{
+  box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
+  border-radius: .4rem;
   position: relative;
-  
-  
+  overflow: hidden;
 }
-.card{
-  margin-bottom: initial;
-  border: initial;
-}
-.Featured-phone .card-img-link ,.Featured-laptop .card-img-link ,
-.Featured-tv .card-img-link ,.Featured-accessories .card-img-link  {
+.products-phone .card-img-link ,.products-laptop .card-img-link ,
+.products-tv .card-img-link ,.products-accessories .card-img-link  {
   
-  margin: 10px 15px;
+  margin: 1rem 1.5rem;
 }
  .card-img-pk {
-  transition: all .5s;
   width: 90%;
   height: 100%;
   
 }
 
-.Featured-phone .card-body ,.Featured-laptop .card-body,
-.Featured-tv .card-body  ,.Featured-accessories .card-body {
+.products-phone .card-body ,.products-laptop .card-body,
+.products-tv .card-body  ,.products-accessories .card-body {
   text-align: initial;
   padding-bottom: initial;
 }
-.Featured-phone .card-body .card-title ,.Featured-laptop .card-body .card-title ,
-.Featured-tv .card-body .card-title ,.Featured-accessories .card-body .card-title {
+.products-phone .card-body .card-title ,.products-laptop .card-body .card-title ,
+.products-tv .card-body .card-title ,.products-accessories .card-body .card-title {
   text-align: initial;
   font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: 1.6rem;
+  line-height: 2.6rem;
 }
-.Featured-phone .card .list-group .list-group-item ,.Featured-laptop .card .list-group .list-group-item,
-.Featured-tv .card .list-group .list-group-item,.Featured-accessories .card .list-group .list-group-item{
+.products-phone .card .list-group .list-group-item ,.products-laptop .card .list-group .list-group-item,
+.products-tv .card .list-group .list-group-item,.products-accessories .card .list-group .list-group-item{
   border-top: initial;
   border-bottom: initial;
 }
 .special-price {
   font-weight: 500;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: 1.8rem;
+  line-height: 2.6rem;
   color: #ff5353;
 }
 .old-price {
-  font-size: 16px;
-  line-height: 18px;
-  color: #707070;
+  font-size: 1.6rem;
+  line-height: 1.8rem;
+  color: #A6A6A6;
   text-decoration: line-through;
 }
+.card-button{
+  position: absolute;
+  left: 0;
+  right: 0;
+  font-size:1.4rem;
+  transform: translateY(700%);
+  transition: transform 500ms ease;
+}
+.card:hover .card-button{
+  transform: translateY(471%);
+  color: #fff;
+  
+}
+
+
+.card-button-laptop{
+  position: absolute;
+  left: 0;
+  right: 0;
+  font-size:1.4rem;
+  transform: translateY(720%);
+  transition: transform 500ms ease;
+}
+.card:hover .card-button-laptop{
+  transform: translateY(606%);
+  color: #fff;
+  
+}
+
+
+.card-button-tv{
+  position: absolute;
+  left: 0;
+  right: 0;
+  font-size:1.4rem;
+  transform: translateY(520%);
+  transition: transform 500ms ease;
+}
+.card:hover .card-button-tv{
+  transform: translateY(392%);
+  color: #fff;
+  
+}
+
+
+.card-button-pk{
+  position: absolute;
+  left: 0;
+  right: 0;
+  font-size:1.4rem;
+  transform: translateY(420%);
+  transition: transform 500ms ease;
+}
+.card:hover .card-button-pk{
+  transform: translateY(286%);
+  color: #fff;
+  
+}
+
+
 .button-product-cart {
   background: #d9d9d9;
 }
+
 .button-product-buy {
   background-color: #ff5353;
 }
-.Featured-phone .btn ,.Featured-laptop .btn,
-.Featured-tv .btn ,.Featured-accessories .btn{
+
+.products-phone .btn ,.products-laptop .btn,
+.products-tv .btn ,.products-accessories .btn{
   font-weight: 500;
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 1.4rem;
+  line-height: 2.2rem;
   border: initial;
   margin-top: initial;
-  
+  padding: .9rem 0;
   background: none;
 }
-.Featured-phone .btn:hover ,.Featured-laptop .btn:hover,
-.Featured-tv .btn:hover ,.Featured-accessories .btn:hover{
+.products-phone .btn:hover ,.products-laptop .btn:hover,
+.products-tv .btn:hover ,.products-accessories .btn:hover{
   color: initial;
 }
-.Featured-phone .btn:focus,.Featured-laptop .btn:focus,
-.Featured-tv .btn:focus ,.Featured-accessories .btn:focus {
+.products-phone .btn:focus,.products-laptop .btn:focus,
+.products-tv .btn:focus ,.products-accessories .btn:focus {
   box-shadow: none;
 }
 .text-km{
-  font-size: 12px;
-line-height: 20px;
+  font-size: 1.2rem;
+line-height: 2rem;
 }
 
 .text-icon {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 1.2rem;
+  line-height: 2.2rem;
   color: #6A7687;
 }
 .icons{
@@ -212,7 +279,7 @@ line-height: 20px;
   background-color: #3f3f3f;
   padding: 4px 5px;
   border-radius: 4px;
-  font-size: 12px;
+  font-size: 1.2rem;
   
 }
 .icon-name-1{
@@ -223,7 +290,161 @@ line-height: 20px;
   background-color: #3f3f3f;
   padding: 4px 5px;
   border-radius: 4px;
-  font-size: 12px;
+  font-size: 1.2rem;
+  
+}
+
+.cpu, .mn , .ram , .bn, .carddh, .kg{
+  display: none;
+
+}
+
+.icon-1:hover .cpu , .icon-2:hover .mn ,
+.icon-3:hover .ram , .icon-4:hover .bn,
+.icon-5:hover .carddh , .icon-6:hover .kg {
+  display: block;
+}
+/* -------------------------------------------------------------------------------------------------------------- */
+
+
+
+
+
+
+  /* .products-phone .card ,.products-laptop .card,
+ .products-tv .card .products-accessories .card{
+  background-color: #fff;
+  border-bottom: none;
+  border-radius: initial;
+  
+}
+.products-phone .card-product:hover{
+  border: solid 1px #dee2e6;
+  
+  
+}
+.button-cart{
+  display: block; 
+}
+.products-phone .card-product:hover .button-cart{
+display: block;
+}
+
+.products-phone .card:hover .card-img-pk, .products-laptop .card:hover  .card-img-pk,
+.products-tv .card:hover  .card-img-pk, .products-accessories .card:hover  .card-img-pk{
+  transform: scale(1.09);
+  
+}
+.card-product{
+  box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
+  border-radius: .4rem;
+  position: relative;
+  overflow: hidden;
+}
+.card{
+  margin-bottom: initial;
+  border: initial;
+}
+.products-phone .card-img-link ,.products-laptop .card-img-link ,
+.products-tv .card-img-link ,.products-accessories .card-img-link  {
+  
+  margin: 1rem 1.5rem;
+}
+ .card-img-pk {
+  transition: all .5s;
+  width: 90%;
+  height: 100%;
+  
+}
+
+.products-phone .card-body ,.products-laptop .card-body,
+.products-tv .card-body  ,.products-accessories .card-body {
+  text-align: initial;
+  padding-bottom: initial;
+}
+.products-phone .card-body .card-title ,.products-laptop .card-body .card-title ,
+.products-tv .card-body .card-title ,.products-accessories .card-body .card-title {
+  text-align: initial;
+  font-weight: bold;
+  font-size: 1.8rem;
+  line-height: 2.6rem;
+}
+.products-phone .card .list-group .list-group-item ,.products-laptop .card .list-group .list-group-item,
+.products-tv .card .list-group .list-group-item,.products-accessories .card .list-group .list-group-item{
+  border-top: initial;
+  border-bottom: initial;
+}
+.special-price {
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 2.6rem;
+  color: #ff5353;
+}
+.old-price {
+  font-size: 1.6rem;
+  line-height: 1.8rem;
+  color: #707070;
+  text-decoration: line-through;
+}
+.button-product-cart {
+  background: #d9d9d9;
+}
+.button-product-buy {
+  background-color: #ff5353;
+}
+.products-phone .btn ,.products-laptop .btn,
+.products-tv .btn ,.products-accessories .btn{
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 2.2rem;
+  border: initial;
+  margin-top: initial;
+  
+  background: none;
+}
+.products-phone .btn:hover ,.products-laptop .btn:hover,
+.products-tv .btn:hover ,.products-accessories .btn:hover{
+  color: initial;
+}
+.products-phone .btn:focus,.products-laptop .btn:focus,
+.products-tv .btn:focus ,.products-accessories .btn:focus {
+  box-shadow: none;
+}
+.text-km{
+  font-size: 1.2rem;
+line-height: 2rem;
+}
+
+.text-icon {
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 2.2rem;
+  color: #6A7687;
+}
+.icons{
+  position: relative;
+  cursor: help;
+}
+.icon-name{
+  position: absolute;
+  top: -110%;
+  left: 0;
+  color: #ffffff;
+  background-color: #3f3f3f;
+  padding: 4px 5px;
+  border-radius: 4px;
+  font-size: 1.2rem;
+  
+}
+.icon-name-1{
+  position: absolute;
+  top: -60%;
+  left: 0;
+  color: #ffffff;
+  background-color: #3f3f3f;
+  padding: 4px 5px;
+  border-radius: 4px;
+  font-size: 1.2rem;
   
 }
 
@@ -235,7 +456,7 @@ line-height: 20px;
 .icon-3:hover .ram , .icon-4:hover .bn,
 .icon-5:hover .carddh , .icon-6:hover .kg {
   display: block;
-}
+} */
 
 
 
@@ -244,15 +465,15 @@ line-height: 20px;
  
   color: #6c757d;
   margin-left: 10px;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 2;
 }
 
 .btn-new{
-  padding: 11px 32px;
+  padding: 1.1rem 3.2rem;
   font-weight: 400;
-font-size: 16px;
-line-height: 24px;
+font-size: 1.6rem;
+line-height: 2.4rem;
 border: initial;
 border-radius: 4px;
 color: #8392a5;
@@ -262,4 +483,70 @@ background-color: #e9ecef;
   background-color:#dee2e6 ;
   font-weight: 700;
   color: #8392a5;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* -----------------------------------------------------------responsive---------------------------------------------- */
+@media (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+  .Breadcrumb-1 {
+    padding: 2rem 9% 0 9%;
+  }
+  
+  
+}
+
+@media (max-width: 991px) {
+  html {
+    font-size: 50%;
+  }
+  .Breadcrumb-1 {
+    padding: 3rem 9% 0 9%;
+  }
+  .product-details{
+    padding-left: 0;
+  }
+  .product-details-parameter{
+    margin-left: 0;
+  }
+  
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 45%;
+  }
+  .filter-button{
+    
+    display: block;
+  }
+  
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 40%;
+  }
+  .Breadcrumb-1 {
+    padding: 4rem 9% 0 9%;
+  }
+  .card-button,.card-button-laptop ,.card-button-tv,.card-button-pk{
+    display: block;
+    position: relative;
+    font-size: 1.4rem;
+    transform: none;
+    
+    
+}
 }
