--- a/project-fe/css/store-product.css
+++ b/project-fe/css/store-product.css
@@ -47,6 +47,9 @@
     background-color: white;
     box-shadow: 0 0 3px 0 #dee2e6;
   }
+  .filter-heading{
+    font-size: 1.6rem;
+  }
   .filter .form-check-label {
     font-size: 1.4rem;
   }
@@ -86,17 +89,22 @@
  .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show,
   .btn-outline-primary:active
   {
-    background-color: #ff5353;
+    background: #ff5353;
     border-color: initial;
     
   }
+  /* .products-tv  .btn-group .btn{
+    background: #b2b2b3;
+  } */
  
 .btn-outline-primary{
+  
   font-size: 1.4rem;
   padding: .5rem!important;
-margin-right: 1rem;
-  color: rgb(46, 46, 46);
+  margin-right: 1rem;
+  color: rgb(90, 90, 90);
   border-radius: 0.4rem!important;
+  
 }
 
 
@@ -309,154 +317,6 @@ line-height: 2rem;
 
 
 
-
-
-  /* .products-phone .card ,.products-laptop .card,
- .products-tv .card .products-accessories .card{
-  background-color: #fff;
-  border-bottom: none;
-  border-radius: initial;
-  
-}
-.products-phone .card-product:hover{
-  border: solid 1px #dee2e6;
-  
-  
-}
-.button-cart{
-  display: block; 
-}
-.products-phone .card-product:hover .button-cart{
-display: block;
-}
-
-.products-phone .card:hover .card-img-pk, .products-laptop .card:hover  .card-img-pk,
-.products-tv .card:hover  .card-img-pk, .products-accessories .card:hover  .card-img-pk{
-  transform: scale(1.09);
-  
-}
-.card-product{
-  box-shadow: rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px;
-  border-radius: .4rem;
-  position: relative;
-  overflow: hidden;
-}
-.card{
-  margin-bottom: initial;
-  border: initial;
-}
-.products-phone .card-img-link ,.products-laptop .card-img-link ,
-.products-tv .card-img-link ,.products-accessories .card-img-link  {
-  
-  margin: 1rem 1.5rem;
-}
- .card-img-pk {
-  transition: all .5s;
-  width: 90%;
-  height: 100%;
-  
-}
-
-.products-phone .card-body ,.products-laptop .card-body,
-.products-tv .card-body  ,.products-accessories .card-body {
-  text-align: initial;
-  padding-bottom: initial;
-}
-.products-phone .card-body .card-title ,.products-laptop .card-body .card-title ,
-.products-tv .card-body .card-title ,.products-accessories .card-body .card-title {
-  text-align: initial;
-  font-weight: bold;
-  font-size: 1.8rem;
-  line-height: 2.6rem;
-}
-.products-phone .card .list-group .list-group-item ,.products-laptop .card .list-group .list-group-item,
-.products-tv .card .list-group .list-group-item,.products-accessories .card .list-group .list-group-item{
-  border-top: initial;
-  border-bottom: initial;
-}
-.special-price {
-  font-weight: 500;
-  font-size: 1.8rem;
-  line-height: 2.6rem;
-  color: #ff5353;
-}
-.old-price {
-  font-size: 1.6rem;
-  line-height: 1.8rem;
-  color: #707070;
-  text-decoration: line-through;
-}
-.button-product-cart {
-  background: #d9d9d9;
-}
-.button-product-buy {
-  background-color: #ff5353;
-}
-.products-phone .btn ,.products-laptop .btn,
-.products-tv .btn ,.products-accessories .btn{
-  font-weight: 500;
-  font-size: 1.4rem;
-  line-height: 2.2rem;
-  border: initial;
-  margin-top: initial;
-  
-  background: none;
-}
-.products-phone .btn:hover ,.products-laptop .btn:hover,
-.products-tv .btn:hover ,.products-accessories .btn:hover{
-  color: initial;
-}
-.products-phone .btn:focus,.products-laptop .btn:focus,
-.products-tv .btn:focus ,.products-accessories .btn:focus {
-  box-shadow: none;
-}
-.text-km{
-  font-size: 1.2rem;
-line-height: 2rem;
-}
-
-.text-icon {
-  font-weight: 500;
-  font-size: 1.4rem;
-  line-height: 2.2rem;
-  color: #6A7687;
-}
-.icons{
-  position: relative;
-  cursor: help;
-}
-.icon-name{
-  position: absolute;
-  top: -110%;
-  left: 0;
-  color: #ffffff;
-  background-color: #3f3f3f;
-  padding: 4px 5px;
-  border-radius: 4px;
-  font-size: 1.2rem;
-  
-}
-.icon-name-1{
-  position: absolute;
-  top: -60%;
-  left: 0;
-  color: #ffffff;
-  background-color: #3f3f3f;
-  padding: 4px 5px;
-  border-radius: 4px;
-  font-size: 1.2rem;
-  
-}
-
-.cpu, .mn , .ram , .bn, .carddh, .kg{
-  display: none;
-
-}
-.icon-1:hover .cpu , .icon-2:hover .mn ,
-.icon-3:hover .ram , .icon-4:hover .bn,
-.icon-5:hover .carddh , .icon-6:hover .kg {
-  display: block;
-} */
 
 
 
