--- a/project-fe/css/footer.css
+++ b/project-fe/css/footer.css
@@ -1,7 +1,7 @@
 
 /* -----------------------------------------------------------footer---------------------------------------------- */
 .container {
-    width: 100%;
+    max-width: 100%;
     margin-right: auto;
     margin-left: auto;
   }
