--- a/project-fe/css/chitietsp.css
+++ b/project-fe/css/chitietsp.css
@@ -4,12 +4,12 @@
 }
 
 .breadcrumb-1 {
-    padding: 0 9%;
+    padding: 1rem 9%;
   }
   
   .breadcrumb-item {
     font-weight: normal;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     line-height: 2.4rem;
   }
 
@@ -425,7 +425,8 @@ font-size: 1.5rem;
   color: #fff;
   background: #ff5353;
   border: initial;
-  margin: 0 4rem ;
+  width: 18rem;
+
 }
 
 
@@ -592,12 +593,13 @@ background-color: #ff5353 ;
 
 
 /* -----------------------------------------------------------responsive---------------------------------------------- */
+
 @media (max-width: 1200px) {
   html {
     font-size: 55%;
   }
-  .Breadcrumb-1 {
-    padding: 2rem 9% 0 9%;
+  .breadcrumb-1 {
+    padding: 3rem 9% 0 9%;
   }
   
   
@@ -607,8 +609,8 @@ background-color: #ff5353 ;
   html {
     font-size: 55%;
   }
-  .Breadcrumb-1 {
-    padding: 3rem 9% 0 9%;
+  .breadcrumb-1 {
+    padding: 6rem 9% 0 9%;
   }
   .product-details{
     padding-left: 0;
@@ -621,17 +623,22 @@ background-color: #ff5353 ;
 
 @media (max-width: 768px) {
   html {
-    font-size: 45%;
+    font-size: 50%;
   }
-  
+  .breadcrumb-1 {
+    padding: 4rem 9% 0 9%;
+  }
 }
 
 @media (max-width: 450px) {
   html {
-    font-size: 40%;
+    font-size: 50%;
   }
-  .Breadcrumb-1 {
-    padding: 4rem 9% 0 9%;
+  .breadcrumb-1 {
+    padding: 5rem 9% 0 9%;
   }
-  
+  .star-rating {
+    margin-right: 2rem;
+    margin-left: 2rem;
+}
 }
