--- a/project-fe/css/store-product.css
+++ b/project-fe/css/store-product.css
@@ -169,6 +169,7 @@
 }
 .card-img-pk{
   transition: all .5s;
+  margin: 0 1.5rem;
 }
 .products-phone .card:hover .card-img-pk, .products-laptop .card:hover  .card-img-pk,
 .products-tv .card:hover  .card-img-pk, .products-accessories .card:hover  .card-img-pk{
@@ -402,9 +403,7 @@ background-color: #e9ecef;
 
 /* -----------------------------------------------------------responsive---------------------------------------------- */
 @media (max-width: 1200px) {
-  html {
-    font-size: 55%;
-  }
+  
   .Breadcrumb-1 {
     padding: 2rem 9% 0 9%;
   }
@@ -414,10 +413,10 @@ background-color: #e9ecef;
 
 @media (max-width: 991px) {
   html {
-    font-size: 50%;
+    font-size: 55%;
   }
   .Breadcrumb-1 {
-    padding: 3rem 9% 0 9%;
+    padding: 4rem 9% 0 9%;
   }
   .product-details{
     padding-left: 0;
@@ -430,7 +429,7 @@ background-color: #e9ecef;
 
 @media (max-width: 768px) {
   html {
-    font-size: 45%;
+    font-size: 50%;
   }
   .filter-button{
     
@@ -441,17 +440,26 @@ background-color: #e9ecef;
 
 @media (max-width: 450px) {
   html {
-    font-size: 40%;
+    font-size: 50%;
+  }
+  
+  .Breadcrumb-1, .banner ,.products-phone ,.products-laptop ,.products-tv ,.products-accessories{
+    padding: 2rem;
+  }
+  h1{
+    margin-bottom: initial;
   }
   .Breadcrumb-1 {
-    padding: 4rem 9% 0 9%;
+    padding: 5rem 5% 0 5%;
   }
   .card-button,.card-button-laptop ,.card-button-tv,.card-button-pk{
     display: block;
     position: relative;
     font-size: 1.4rem;
     transform: none;
-    
-    
+}
+.card:hover .card-button{
+  transform: none; 
+  
 }
 }
