--- a/project-fe/css/checkout.css
+++ b/project-fe/css/checkout.css
@@ -7,6 +7,12 @@
   .ml-3{
     margin-left: 3rem;
     }
+  .pr-0{
+    padding-right: .5rem;
+  }
+  .pl-0{
+    padding-left: .5rem;
+  }
   .breadcrumb-1 {
     padding: 0 9%;
   }
@@ -155,7 +161,14 @@
     }
     
   }
-  
+  @media (max-width: 576px) {
+    .pr-0{
+      padding-right: 0;
+    }
+    .pl-0{
+      padding-left: 0;
+    }
+}
   
   @media (max-width: 450px) {
     html {
@@ -166,3 +179,4 @@
   
   }
 }
+
